# whatsapp-automation

./: PyWhatKit_DB.txt  automation.py  manual.py  places.csv  pyproject.toml  script.py
