[tool.poetry]
name = "whatsapp-automation"
version = "0.1.0"
description = ""
authors = ["musel25 <muselemmanuel@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pywhatkit = "^5.4"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
